clean up sonar